<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/px12"
    android:background="@color/text_c5c5c5"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px160"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/px12"
            android:layout_weight="1"
            android:background="@drawable/shape_pwd_num"
            android:gravity="center"
            android:text="@string/one_keyboard"
            android:textColor="@color/text_3"
            android:textSize="@dimen/px42" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/px12"
            android:layout_weight="1"
            android:background="@drawable/shape_pwd_num"
            android:gravity="center"
            android:text="@string/two_keyboard"
            android:textColor="@color/text_3"
            android:textSize="@dimen/px42" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/px12"
            android:layout_weight="1"
            android:background="@drawable/shape_pwd_num"
            android:gravity="center"
            android:text="@string/three_keyboard"
            android:textColor="@color/text_3"
            android:textSize="@dimen/px42" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px160"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/px12"
            android:layout_weight="1"
            android:background="@drawable/shape_pwd_num"
            android:gravity="center"
            android:text="@string/four_keyboard"
            android:textColor="@color/text_3"
            android:textSize="@dimen/px42" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/px12"
            android:layout_weight="1"
            android:background="@drawable/shape_pwd_num"
            android:gravity="center"
            android:text="@string/five_keyboard"
            android:textColor="@color/text_3"
            android:textSize="@dimen/px42" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/px12"
            android:layout_weight="1"
            android:background="@drawable/shape_pwd_num"
            android:gravity="center"
            android:text="@string/six_keyboard"
            android:textColor="@color/text_3"
            android:textSize="@dimen/px42" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px160"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/px12"
            android:layout_weight="1"
            android:background="@drawable/shape_pwd_num"
            android:gravity="center"
            android:text="@string/seven_keyboard"
            android:textColor="@color/text_3"
            android:textSize="@dimen/px42" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/px12"
            android:layout_weight="1"
            android:background="@drawable/shape_pwd_num"
            android:gravity="center"
            android:text="@string/eight_keyboard"
            android:textColor="@color/text_3"
            android:textSize="@dimen/px42" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/px12"
            android:layout_weight="1"
            android:background="@drawable/shape_pwd_num"
            android:gravity="center"
            android:text="@string/nine_keyboard"
            android:textColor="@color/text_3"
            android:textSize="@dimen/px42" />
    </LinearLayout> <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px160"
        android:orientation="horizontal">

        <TextView
            android:visibility="invisible"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/px12"
            android:layout_weight="1"
            android:background="@drawable/shape_pwd_num"
            android:gravity="center"
            android:text="@string/seven_keyboard"
            android:textColor="@color/text_3"
            android:textSize="@dimen/px42" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/px12"
            android:layout_weight="1"
            android:background="@drawable/shape_pwd_num"
            android:gravity="center"
            android:text="@string/zero_keyboard"
            android:textColor="@color/text_3"
            android:textSize="@dimen/px42" />

        <ImageView
            android:src="@mipmap/keyboard_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/px12"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/nine_keyboard"
            android:textColor="@color/text_3"
            android:textSize="@dimen/px42" />
    </LinearLayout>

</LinearLayout>